whatsapp icon fixed
Whatsapp Icon fiexd also change bg color of header and footer

--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SHAKRA-AMBREEN/qurantutoring.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SHAKRA-AMBREEN/qurantutoring/issues"
+  },
+  "homepage": "https://github.com/SHAKRA-AMBREEN/qurantutoring#readme"
 }
